# Slum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
case/: CMakeLists.txt  case0_timer.cpp  case1_phasor.cpp  case1_shaper.cpp  case2_shaper.cpp  case3_slum_test_file.cpp  case4_formatter.cpp
code/core/: CMakeLists.txt
code/core/public/: checker.h  f_cmp.h  i_cmp.h  phasor.h  shaper.h  slum_lim.h  test_file_processor.h  timer.cpp  timer.h  trans_policy.h
code/core/source/: phasor.cpp  shaper.cpp  test_file_processor.cpp  timer.cpp
code/core/source/shaper/: CMakeLists.txt  sin_shaper.cpp  sqr_shaper.cpp  tri_shaper.cpp
code/plugin/formatter/: formatter.h
code/plugin/print_array/: print_array.h
powershell/: remake_data.ps1
scripts/bash/: clear_all.sh  refresh_output.sh
scripts/powershell/: clear_temp.ps1  refresh_output.ps1  remake_data.ps1
scripts/python3/: linear_plot.py
